# MERTH

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  salesman.js  scraper.js  test.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/plan/: route.ts
components/: StoreMap.tsx
lib/: fixtures.ts  planner.ts  routing.ts  salesman.ts  svg.ts  types.ts
lib/homedepot/: client.ts  scraper.ts  session.ts
scripts/: recon-headed.mjs  recon.mjs  shot.mjs  test-scraping-browser.mjs
service/: .env.example  README.md  pyproject.toml
service/merth_service/: __init__.py  browser.py  config.py  main.py  models.py  planner.py  routing.py  salesman.py  scraper.py  svg.py
service/scripts/: capture_map.py  cart_test.py  e2e_cart.py  e2e_demo.py  gen_example_image.py  verify_scrape.py
web/: .env.example  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/plan/: route.ts
web/components/: GuidedPlan.tsx  Scanner.tsx  StoreMap.tsx
web/lib/: types.ts
