[project]
name = "merth-service"
version = "2.0.0"
description = "MERTH route-planning service: scrape Home Depot's store-map SVG, optimize the in-store route (TSP/simulated annealing), and render it onto the real map."
authors = [{ name = "Timothy Lee Long" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "scrapling[fetchers]>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["merth_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
